force-app/main/default/objects/Duty_Additional_Contract__c/Duty_Additional_Contract__c.object-meta.xml
<CustomObject>
    <label>Duty Additional Contract</label>
    <nameField>
        <displayFormat>DAC-{0000000}</displayFormat>
        <label>Duty Additional Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duty Additional Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>