force-app/main/default/objects/Duty_Additional_Contract__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <description>TEXT(Forward_Duty_Contract__r.Bank__c )</description>
    <formula>&apos;a&apos;</formula>
    <label>Bank</label>
    <type>Text</type>
</CustomField>