force-app/main/default/objects/Duty_Additional_Contract__c/fields/Contract_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rate__c</fullName>
    <formula>Forward_Duty_Contract__r.Contract_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>