force-app/main/default/objects/Duty_Additional_Contract__c/fields/Cover_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Cover_Percentage__c</fullName>
    <formula>Forward_Duty_Contract__r.Cover_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>