force-app/main/default/objects/Duty_Additional_Contract__c/fields/Duty_Sale_Contract_Approved__c.field-meta.xml
<CustomField>
    <fullName>Duty_Sale_Contract_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duty Sale Contract Approved</label>
    <type>Checkbox</type>
</CustomField>