force-app/main/default/objects/Duty_Additional_Contract__c/fields/Forward_Duty_Contract__c.field-meta.xml
<CustomField>
    <fullName>Forward_Duty_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forward Duty Contract</label>
    <referenceTo>Forward_Duty_Contract__c</referenceTo>
    <relationshipLabel>Duty Additional Contracts</relationshipLabel>
    <relationshipName>Duty_Additional_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>