force-app/main/default/objects/Duty_Additional_Contract__c/fields/PO_Cancellation_Contract_Approved__c.field-meta.xml
<CustomField>
    <fullName>PO_Cancellation_Contract_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Cancellation Contract Approved</label>
    <type>Checkbox</type>
</CustomField>