force-app/main/default/objects/Duty_Additional_Contract__c/fields/Premium_Discount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Discount__c</fullName>
    <formula>Forward_Duty_Contract__r.Premium_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium(+) / Discount(-)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>