force-app/main/default/objects/Duty_Additional_Contract__c/fields/Production_Month_YYYYMM__c.field-meta.xml
<CustomField>
    <fullName>Production_Month_YYYYMM__c</fullName>
    <formula>Forward_Duty_Contract__r.Production_Month_YYYYMM__c</formula>
    <label>Production Month (YYYYMM)</label>
    <type>Text</type>
</CustomField>