force-app/main/default/objects/Duty_Additional_Contract__c/fields/Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Spot_Rate__c</fullName>
    <label>Spot Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>