force-app/main/default/objects/Duty_Additional_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forward Contract Sell</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed (PO Cancel)</fullName>
            </value>
            <value>
                <fullName>PO Cancellation</fullName>
            </value>
            <value>
                <fullName>Forward Contract Duty Sale</fullName>
            </value>
            <value>
                <fullName>Forward Contract Execute</fullName>
                <isActive>false</isActive>
                <label>Forward Contract Execute</label>
            </value>
            <value>
                <fullName>Forward Contract Sell on Maturity</fullName>
                <isActive>false</isActive>
                <label>Forward Contract Sell on Maturity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>