force-app/main/default/objects/Duty_Additional_Contract__c/fields/Total_Cover_Amount_In_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Cover_Amount_In_Currency__c</fullName>
    <label>Total Cover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>