force-app/main/default/objects/Duty_Additional_Contract__c/fields/Transaction_Date_Sell_Execute__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_Sell_Execute__c</fullName>
    <label>Transaction Date (Sell)</label>
    <type>Date</type>
</CustomField>