force-app/main/default/objects/Duty_Additional_Contract__c/validationRules/Can_not_edit_after_Sell_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_edit_after_Sell_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()), OR(Duty_Sale_Contract_Approved__c, PO_Cancellation_Contract_Approved__c) , $Permission.TMS_Makers_Permission)
&amp;&amp; NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>You are not allowed to edit after Sell Forward Contract approved</errorMessage>
</ValidationRule>